Added ability to view instances of class model - properly configured all foreing keys

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -36,7 +36,7 @@
             {% if user.is_authenticated %}
                 <li class="nav-item">
                 <a class="nav-link" href="#">
-                    <img style="width: 32px;border-radius: 64px;" src="media/{{user.userprofile.profile_image}}">
+                    <img style="width: 32px;border-radius: 64px;" src="/media/{{user.userprofile.profile_image}}">
                 </a>
                 </li>
             {% endif %}
