--- a/main/templates/main/detail.html
+++ b/main/templates/main/detail.html
@@ -9,20 +9,38 @@
 
     <hr>
     <label class="name_pictuire" style="margin-top : 10px;position: relative;cursor: pointer;"><a id="nam{{article.pk}}" href="d" style="color: #333;text-decoration: none;"><h1>{{article.name}}</h1></a>
-    <div style="float: left;margin: 10px;" style="position: relative;" class="image">
-        {% if article.images %}
-            {% for image in article.images.all %}
-                <img class="external" onclick="window.location = window.location.host + '/articles/' + '{{article.name}}'.replace(/\s+/,'-') + '-{{article.pk}}'" style="width: 100%;" src="/media/{{ image.image }}">
-            {% endfor %}
-        {% else %}
-            <b>No Image</b>
-        {% endif %}
-    </div>        
-        <span></span></label>
-    <p id="description_{{article.id}}" style="font-size: 15px;text-align: justify;" class="lead text-muted">{{ article.description }}</p>
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                {% for image in article.images.all %}
+                    {% if image.image == article.thumbnail.image %}
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="/media/{{ image.image }}" alt="First slide">
+                    </div>
+                    {% else %}
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="/media/{{ image.image }}" alt="First slide">
+                    </div>
+
+                    {% endif %}
+                {% endfor %}
+            </div>
+            {% if article.images.all.count > 1 %}
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          {% endif %}
+          
+    <p id="description_{{article.id}}" style="font-size: 15px;text-align: justify;" class="lead text-muted">{{ article.description|safe }}</p>
     <script>
         document.getElementById("nam{{article.pk}}").href = '/articles/' + '{{article.name}}'.replace(/\s+/,'-') + '-{{article.pk}}'
     </script>
+    <code>Comment by me</code>
 </div>
 
 {% endblock content %}
