--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -65,6 +65,13 @@
         }
     }
 
+    @media only screen and (max-width: 483px) {
+        .external {
+            width: 100% !important;
+        }
+    }
+
+
     @media only screen and (max-width: 450px) {
         .container.article {
             width: 100% !important;
