--- a/main/templates/main/detail.html
+++ b/main/templates/main/detail.html
@@ -4,7 +4,7 @@
 <div id="root" style="margin-top : 20px;" class="container article">
     {{article.date_created}}
     <div style="float: right;">
-        <img style="width: 32px;border-radius: 64px;" src="/media/{{article.creator.userprofile.profile_image}}">
+        <img style="width: 32px;border-radius: 64px;" src="/media/{{user.userprofile.profile_image}}">
     </div>
 
     <hr>
