--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -60,3 +60,16 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </html>
+<script defer>
+  document.getElementById("exit").addEventListener("click",(e) => {
+      e.preventDefault;
+      if (confirm("Are you sure you want to abort this operation?")) {
+          location.href = "/"
+      }
+  })
+
+  $(function () {
+      $("[rel='tooltip']").tooltip();
+  });
+
+</script>
