--- a/main/templates/main/create_article.html
+++ b/main/templates/main/create_article.html
@@ -3,44 +3,80 @@
 
 
 {% block content %}
+
+<style>
+    * {
+        outline: none !important;
+        box-shadow: none !important;
+    }
+</style>
+
+
 <div style="margin-top: 10px;" class="container">
-    <input id="input_title" class="form-control" placeholder="Title">
+    <div style="visibility: hidden;position: absolute;" id="error" class="alert alert-danger" role="alert">
+        One of the following requirements was <b>ignored</b>:
+        <li>Description must be <b>more than 20</b> characters</li>
+        <li>Title must be <b>more than 1</b> character</li>
+        <li>Article must contain <b>at least one</b> image</li>
+      </div>
+    {% csrf_token %}
+    <input id="input_title" class="form-control" accept="image/*" placeholder="Title">
     <br>
     <div class="content">
-    <button id="i" class="html">
+    <div style="background-color: #f1f1f1;width: 100%;height: 40px;"> 
+        <button style="float: left;" id="i" class="html">
 
-        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-type-italic" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-            <path d="M7.991 11.674L9.53 4.455c.123-.595.246-.71 1.347-.807l.11-.52H7.211l-.11.52c1.06.096 1.128.212 1.005.807L6.57 11.674c-.123.595-.246.71-1.346.806l-.11.52h3.774l.11-.52c-1.06-.095-1.129-.211-1.006-.806z"/>
-        </svg>          
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-type-italic" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path d="M7.991 11.674L9.53 4.455c.123-.595.246-.71 1.347-.807l.11-.52H7.211l-.11.52c1.06.096 1.128.212 1.005.807L6.57 11.674c-.123.595-.246.71-1.346.806l-.11.52h3.774l.11-.52c-1.06-.095-1.129-.211-1.006-.806z"/>
+            </svg>          
 
-    </button>
-    <button id="b" class="html">
-
-
-        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-type-bold" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-            <path d="M8.21 13c2.106 0 3.412-1.087 3.412-2.823 0-1.306-.984-2.283-2.324-2.386v-.055a2.176 2.176 0 0 0 1.852-2.14c0-1.51-1.162-2.46-3.014-2.46H3.843V13H8.21zM5.908 4.674h1.696c.963 0 1.517.451 1.517 1.244 0 .834-.629 1.32-1.73 1.32H5.908V4.673zm0 6.788V8.598h1.73c1.217 0 1.88.492 1.88 1.415 0 .943-.643 1.449-1.832 1.449H5.907z"/>
-        </svg>
-
-    </button>
-    <button id="samp" class="html">
+        </button>
+        <button style="float: left;" id="b" class="html">
 
 
-        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-code-slash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" d="M4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0zm6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0zm-.999-3.124a.5.5 0 0 1 .33.625l-4 13a.5.5 0 0 1-.955-.294l4-13a.5.5 0 0 1 .625-.33z"/>
-          </svg>
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-type-bold" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.21 13c2.106 0 3.412-1.087 3.412-2.823 0-1.306-.984-2.283-2.324-2.386v-.055a2.176 2.176 0 0 0 1.852-2.14c0-1.51-1.162-2.46-3.014-2.46H3.843V13H8.21zM5.908 4.674h1.696c.963 0 1.517.451 1.517 1.244 0 .834-.629 1.32-1.73 1.32H5.908V4.673zm0 6.788V8.598h1.73c1.217 0 1.88.492 1.88 1.415 0 .943-.643 1.449-1.832 1.449H5.907z"/>
+            </svg>
+
+        </button>
+        <button style="float: left;" id="samp" class="html">
 
 
-    </button>
-    <button id="p" class="html">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-code-slash" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0zm6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0zm-.999-3.124a.5.5 0 0 1 .33.625l-4 13a.5.5 0 0 1-.955-.294l4-13a.5.5 0 0 1 .625-.33z"/>
+            </svg>
 
 
-        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-paragraph" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" d="M8 1h4.5a.5.5 0 0 1 0 1H11v12.5a.5.5 0 0 1-1 0V2H9v12.5a.5.5 0 0 1-1 0V1z"/>
-            <path d="M9 1v8H7a4 4 0 1 1 0-8h2z"/>
-          </svg>
+        </button>
+
+        <button style="float: right;" id="p" class="html">
 
 
-    </button>
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-paragraph" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M8 1h4.5a.5.5 0 0 1 0 1H11v12.5a.5.5 0 0 1-1 0V2H9v12.5a.5.5 0 0 1-1 0V1z"/>
+                <path d="M9 1v8H7a4 4 0 1 1 0-8h2z"/>
+            </svg>
+
+        </button>
+
+        <button style="float: right;" id="li" class="html">
+
+
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-list" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+            </svg>
+            
+        </button>
+
+        <button style="float: right;" id="kbd" class="html">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-bullseye" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                <path fill-rule="evenodd" d="M8 13A5 5 0 1 0 8 3a5 5 0 0 0 0 10zm0 1A6 6 0 1 0 8 2a6 6 0 0 0 0 12z"/>
+                <path fill-rule="evenodd" d="M8 11a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8z"/>
+                <path d="M9.5 8a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+            </svg>
+        </button>
+    </div>
     <textarea id="post" style="border-top-right-radius: 0;border-top-left-radius: 0;min-height: 288px;" class="form-control"></textarea>
     </div>
     <div style="margin-top : 50px">
@@ -49,11 +85,15 @@
             <kbd>Upload File</kbd>
             <input multiple="true" id="file_upload" type="file" style="display: none;">
         </label>
-        
+        <span><b id="file_num">0</b> Files selected</span>
         </div>
     </div>
+    <button id="exit" style="margin-top: 30px;float: right;" class="btn btn-secondary">CANCEL</button>
+    <button id="create_article" style="margin-top: 30px;float: right;margin-right: 15px;" class="btn btn-secondary">UPLOAD</button>
+    <button data-toggle="modal" data-target="#exampleModal" id="thumbnail_chose" id="create_article" style="margin-top: 30px;float: left;margin-right: 15px;visibility: hidden;" class="btn btn-info">Choose Thumbnail</button>
+
 </div>
-<div style="margin-top: 100px;" class="container preview">
+<div style="margin-top: 150px;" class="container preview">
     <label class="text-muted">{{date}}</label>
     <div style="float: right;">
         <img style="width: 32px;border-radius: 64px;" src="/media/{{user.userprofile.profile_image}}">
@@ -63,6 +103,32 @@
     <img id="thumbnail" style="width: 100%;">
     <p style="margin-top: 50px;" id="description" class="lead"></p> 
 </div>
+
+
+  
+  <!-- THUMBNAIL SELECTION MODAL -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Chose a thumbnail</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div id="thumbnails"  class="modal-body container">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+
+
+
 <style>
     .content button{
         border: 0;
@@ -70,48 +136,8 @@
         height: 35px;
     }
 </style>
+<script src='{% static "main/axios.js" %}'></script>
 <script src='{% static "main/copy.js" %}'></script>
-<script>
-
-    input_title.addEventListener("")
-
-
-    const textarea = document.getElementById("post");
-    var after = 0;
-
-    document.querySelectorAll(".html").forEach(element => {
-        element.addEventListener("click",(e) => {
-            console.log(e.target)
-            let end = textarea.selectionEnd;
-
-            let html_tag = e.target.id;
-            console.log(html_tag)
-            textarea.focus();
-            textarea.textContent += `<${html_tag}> </${html_tag}>`
-            textarea.selectionStart = html_tag.length + 2;
-        })
-    })
-
-    textarea.addEventListener("keydown",(e) => {
-        console.log(textarea.selectionStart)
-        console.log(textarea.selectionEnd)
-        if (e.keyCode === 9)
-        {
-            e.preventDefault()
-            textarea.value +='<b>hello</b>'
-            textarea.selectionStart = textarea.textContent.length
-            // console.log(`Variable after : ${after}`)
-            // console.log(textarea.selectionStart)
-            // e.preventDefault();
-            // textarea.focus();
-            // console.log(textarea.textContent.length);
-            // textarea.textContent += '   '
-            // textarea.selectionStart = after + 4
-            // after = Number(String(textarea.selectionStart)) + 4
-
-        }
-    })
-    
-</script>
-
+<script src='{% static "main/editor.js" %}'></script>
+<script src='{% static "main/websocket.js" %}'></script>
 {% endblock content %}
