--- a/main/templates/main/detail.html
+++ b/main/templates/main/detail.html
@@ -74,11 +74,13 @@
     {% else %}
     <span >No comments</span>
     {% endif %}
-    <span style="float: right;">
+    {% if user == article.creator %}
+    <span id="delete" style="float: right;cursor: pointer;">
         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-border-style" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path d="M1 3.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-1zm0 4a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-5a.5.5 0 0 1-.5-.5v-1zm0 4a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm8 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-4 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm8 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-4-4a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-5a.5.5 0 0 1-.5-.5v-1z"/>
         </svg>          
     </span>
+    {% endif %}
     <hr>
     <div class="comments">
         {% if user.is_authenticated %}
@@ -174,5 +176,12 @@
     </div>
 </div>
 <script src='{% static "main/detail.js" %}'></script>
+<script>
+    document.getElementById("delete").addEventListener("click",function(){
+        if(confirm("Are you sure you want to delete post '{{article.name}}?'")) {
+            location.href = "/auth/articles/callback/remove/{{article.pk}}"
+        }
+    })
+</script>
 {% endblock content %}
 
